# rules_jsonnet

./: MODULE.bazel
jsonnet/: BUILD  jsonnet.bzl
tools/sjsonnet/: BUILD.bazel
